--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <title>OHMYFOOD</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="mozilla">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="restaurant-description" content="Ohmyfood! est une entreprise de commande de repas en ligne. 
     Notre concept permet aux utilisateurs de composer leur propre menu et réduire leur temps d’attente dans les
@@ -38,7 +38,7 @@
     <main>
 
         <p class="position">
-            <i class="fas fa-map-marker-alt" center></i>
+            <i class="fas fa-map-marker-alt"></i>
             Paris, Belleville
         </p>
 
