--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte
     !">   
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="css/accueil.css">
+    <link rel="stylesheet" href="/css/accueil.css">
   
 
 
