--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="restaurants-list">
 
                 <div class="card restaurant">
-                    <a href=".menus/a_la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
+                    <a href="menus/a_la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
                         <p class="restaurant--new">Nouveau</p>
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant La palette du goût">
                         <div class="restaurant-description">
