--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
     <header>
-        <h1>ohmyfood  teste ./css/accueil.css </h1>
+        <h1>ohmyfood  teste /CSS/accueil.csss </h1>
     </header>
 
 
