--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte
     !">   
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/CSS/accueil.css">
+    <link rel="stylesheet" href="CSS/accueil.css">
   
 
 
@@ -20,7 +20,7 @@
 
 
     <header>
-        <h1>ohmyfood  teste /CSS/accueil.csss </h1>
+        <h1>ohmyfood  teste CSS/accueil.csss </h1>
     </header>
 
 
@@ -100,7 +100,7 @@
             <div class="restaurants-list">
 
                 <div class="card restaurant">
-                    <a href="/Menus/a_la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
+                    <a href="Menus/a_la_palette_du_gout.html" title="voir le menu du restaurant La palette du goût">
                         <p class="restaurant--new">Nouveau</p>
                         <img src="Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant La palette du goût">
                         <div class="restaurant-description">
