--- a/Menus/a_la_francaise.html
+++ b/Menus/a_la_francaise.html
@@ -23,17 +23,17 @@
                     <i class="fas fa-arrow-left"></i>
                 </a>
             </nav>
-            <h1>ohmyfood</h1>
+            <h1>ohmyfood ./Images </h1>
             <i class="fas fa-arrow-right"></i>            
         </header>
 
         <main>
             
-            <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="./Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
                 <div>
-                    <h2>À la française</h2>
+                    <h2>À la française  </h2>
                     <button class="heart heart--big">
                         <i class="far fa-heart"></i>
                         <i class="fas fa-heart"></i>
