--- a/Menus/a_la_francaise.html
+++ b/Menus/a_la_francaise.html
@@ -10,7 +10,7 @@
         restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte
         !">   
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-        <link rel="stylesheet" href="CSS/menu.css">
+        <link rel="stylesheet" href="./CSS/menu.css">
  
 
     </head>
@@ -23,13 +23,13 @@
                     <i class="fas fa-arrow-left"></i>
                 </a>
             </nav>
-            <h1>ohmyfood ./Images </h1>
+            <h1>ohmyfood Images </h1>
             <i class="fas fa-arrow-right"></i>            
         </header>
 
         <main>
             
-            <img src="./Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
+            <img src="Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant À la française">
 
             <section>
                 <div>
