--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
             <li>
                 <a href=mailto: jeanphilippe.kohlhayer@gmail.com title="nous envoyer un mail">
-                    <i class="fa-solid fa-at"></i>
+                    <i class="fas fa-solid fa-at"></i>
                     Contact
                 </a>
             </li>
