--- a/index.html
+++ b/index.html
@@ -200,13 +200,14 @@
 
             <li>
                 <a href="#" title="voir nos mentions légales">
+                    <i class="fas fa-file-contract"></i>
                 Mentions légales
                 </a>
             </li>
 
             <li>
                 <a href=mailto: jeanphilippe.kohlhayer@gmail.com title="nous envoyer un mail">
-                    <i class="fas fa-solid fa-at"></i>
+                   <i class="fas fa-envelope"></i>
                     Contact
                 </a>
             </li>
