--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             </li>
 
             <li>
-                <a href=mailto: jeanphilippe.kohlhayer@gmail.com title="nous envoyer un mail">
+                <a href="mailto: jeanphilippe.kohlhayer@gmail.com" title="nous envoyer un mail">
                    <i class="fas fa-envelope"></i>
                     Contact
                 </a>
